--- a/src/common/cardBox/index.less
+++ b/src/common/cardBox/index.less
@@ -3,6 +3,9 @@
   width: 100%;
   background: #fff;
   box-sizing: border-box;
+  &.marginBottom20{
+    margin-bottom: 20px;
+  }
   .card-Title{
     width:100%;
     height: 80px;
