--- a/src/common/orderItem/index.less
+++ b/src/common/orderItem/index.less
@@ -3,6 +3,7 @@
 .orderItem-container{
   width: 100%;
   background: #fff;
+  margin-top: 20px;
   .top{
     height: 74px;
     border-bottom: 1px solid #E5E5E5;
