--- a/src/common/tab/index.less
+++ b/src/common/tab/index.less
@@ -6,6 +6,7 @@
     line-height: 80px;
     display: flex;
     border-bottom: 1px solid #E5E5E5;
+    background: #fff;
     .tab_item{
       height: 100%;
       flex: 1;
