--- a/src/pages/orderdetail/index.less
+++ b/src/pages/orderdetail/index.less
@@ -1,14 +1,39 @@
-.title-content-topDown{
+page{
   width: 100%;
-  .title-content-item{
-    width:100%;
-    .title{
-      font-size: 28px;
-      color: #38A8F6;
-    }
-    .height-width-auto{
-      font-size: 26px;
-      color: #333;
-    }
+  height: 100%;
+  background: #f5f5f5;
+}
+.taro_page{
+ height:100%;
+}
+.orderdetail-page{
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+}
+.footer-btn{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 104px;
+  line-height: 104px;
+  position: fixed;
+  bottom: 0;
+  >view,>div{
+    width: 50%;
+    height:100%;
+    text-align: center;
+    font-size: 30px;
+  }
+  >view:first-child,>div:first-child{
+    background: #fff;
+    color: #3E3E3E;
+  }
+  >view:last-child,>div:last-child{
+    background:linear-gradient(90deg,rgba(243,168,95,1),rgba(245,92,62,1));
+    color: #fff;
   }
 }
+
+
+
