--- a/src/pages/orderlist/index.less
+++ b/src/pages/orderlist/index.less
@@ -1,3 +1,13 @@
+page{
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+}
+.taro_page{
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+}
 .orderDetail-page{
 
 }
