--- a/src/pages/orderdetail/components/sectionCss.less
+++ b/src/pages/orderdetail/components/sectionCss.less
@@ -21,87 +21,90 @@
   }
 }
 //酒店信息
-.model2{
-  width: 100%;
-  padding: 0 30px 20px;
-  border-bottom: 1px solid #e5e5e5;
-  box-sizing: border-box;
-  margin-bottom: 19px;
-  &.np-mb{
-    margin-bottom:0;
-  }
-  .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    line-height: 30px;
-    margin-bottom: 16px;
-    .header-line{
-      font-size: 28px;
-      color:#333333;
+.cardBox-content-model{
+  .model2{
+    width: 100%;
+    padding: 0 30px 20px;
+    border-bottom: 1px solid #e5e5e5;
+    box-sizing: border-box;
+    margin-bottom: 19px;
+    &.np-mb{
+      margin-bottom:0;
+    }
+    .header{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      line-height: 30px;
+      margin-bottom: 16px;
+      .header-line{
+        font-size: 28px;
+        color:#333333;
+      }
+
+      .header-right{
+        color:#38A8F6;
+        font-size: 28px;
+        display: flex;
+        align-items: center;
+        .icon{
+          margin-left: 10px;
+          width: 16px;
+          height: 26px;
+          background: url("../../../asset/img/right.png") no-repeat;
+          background-size: cover;
+        }
+      }
     }
 
-    .header-right{
-      color:#38A8F6;
-      font-size: 28px;
+    .content{
+      font-size: 26px;
+      color: #8C8C8C;
+    }
+  }
+
+  .btn-double{
+    height: 100px;
+    display: flex;
+    align-items: center;
+    color: #38A8F6;
+    font-size: 30px;
+    text-align: center;
+    .btn:first-child{
+      border-right: 1px solid #E5E5E5;
+    }
+    .btn{
+      width: 50%;
+      height: 40px;
       display: flex;
+      justify-content: center;
       align-items: center;
-      .icon{
+      box-sizing: border-box;
+      span,text{
+        vertical-align: middle;
         margin-left: 10px;
-        width: 16px;
-        height: 26px;
-        background: url("../../../asset/img/right.png") no-repeat;
+      }
+      .address::before{
+        content: '';
+        display: inline-block;
+        vertical-align: middle;
+        width: 30px;
+        height: 36px;
+        background: url("../../../asset/img/address.png") no-repeat;
+        background-size: cover;
+      }
+      .phone::before{
+        content: '';
+        display: inline-block;
+        vertical-align: middle;
+        width: 30px;
+        height: 36px;
+        background: url("../../../asset/img/phone.png") no-repeat;
         background-size: cover;
       }
     }
   }
 
-  .content{
-    font-size: 26px;
-    color: #8C8C8C;
-  }
-}
-
-.btn-double{
-  height: 100px;
-  display: flex;
-  align-items: center;
-  color: #38A8F6;
-  font-size: 30px;
-  text-align: center;
-  .btn:first-child{
-    border-right: 1px solid #E5E5E5;
-  }
-  .btn{
-    width: 50%;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    span,text{
-      vertical-align: middle;
-      margin-left: 10px;
-    }
-    .address::before{
-      content: '';
-      display: inline-block;
-      vertical-align: middle;
-      width: 30px;
-      height: 36px;
-      background: url("../../../asset/img/address.png") no-repeat;
-      background-size: cover;
-    }
-    .phone::before{
-      content: '';
-      display: inline-block;
-      vertical-align: middle;
-      width: 30px;
-      height: 36px;
-      background: url("../../../asset/img/phone.png") no-repeat;
-      background-size: cover;
-    }
-  }
 }
 //单行显示
 
