--- a/src/app.less
+++ b/src/app.less
@@ -9,6 +9,34 @@
 .colorACACAC{
   color: #ACACAC;
 }
+div,view,View{
+  box-sizing: border-box;
+}
+.hotel-button{
+  color: white;
+  background: -webkit-linear-gradient(left, #F3A85F , #F55C3E); /* Safari 5.1 - 6.0 */
+  background: -o-linear-gradient(right,  #F3A85F , #F55C3E); /* Opera 11.1 - 12.0 */
+  background: -moz-linear-gradient(right,  #F3A85F , #F55C3E); /* Firefox 3.6 - 15 */
+  background: linear-gradient(to right,  #F3A85F , #F55C3E); /* 标准的语法 */
+}
+.container{
+  background-color: #f3f4f3 !important;
+  font-size: 14px;
+  width: 100%;
+  height: 100%;
+  .pd-15{
+    width: 100%;
+    padding: 20px;
+  }
+  .text-r{
+    text-align: right;
+  }
+  .text-ellipsis{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
 
 
 
