--- a/src/pages/city/index.less
+++ b/src/pages/city/index.less
@@ -1,6 +1,7 @@
 page{
   height:100%;
   background: #f5f5f5;
+  overflow: hidden;
 }
 .citylist-content{
   .list-group{
@@ -109,7 +110,7 @@ page{
   line-height: 70px;
   box-sizing: border-box;
   padding: 0 15px;
-  position: relative;
+ /* position: relative;*/
   border-radius: 10px;
   overflow: hidden;
   display: flex;
@@ -145,5 +146,21 @@ page{
     font-size: 26px;
     padding-left:4px;
     width: 90%;
+  }
+  .icon-clear{
+    font-size: 24px;
+    width: 54px;
+    height:100%;
+    color:#949494;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .search-icon-clear{
+      width: 24px;
+      height: 24px;
+      background: url("../../asset/img/delete.png") no-repeat;
+      background-size: 100% 100%;
+    }
   }
 }
