--- a/src/app.less
+++ b/src/app.less
@@ -9,6 +9,28 @@
 .colorACACAC{
   color: #ACACAC;
 }
+.colorF60{
+  color: #f60;
+}
+.color999{
+  color: #999;
+}
+
+
+.fontSize20{
+  font-size: 20px;
+}
+.fontSize22{
+  font-size: 22px;
+}
+.fontSize26{
+  font-size: 22px;
+}
+.fontSize50{
+  font-size: 50px;
+}
+
+
 div,view,View{
   box-sizing: border-box;
 }
