--- a/src/pages/city/component/index.less
+++ b/src/pages/city/component/index.less
@@ -17,6 +17,12 @@
     line-height: 86px;
     color: #3E3E3E;
     font-size: 30px;
+    .high-light{
+      color:#0D87E4
+    }
+    .cityName_car{
+      padding-left: 40px;
+    }
   }
   .city:last-child{
     border-bottom: none;
