--- a/src/common/header/index.less
+++ b/src/common/header/index.less
@@ -1,4 +1,4 @@
-
+@import "../../asset/css/config";
 .header-parent {
   position: relative;
   width: 100%;
@@ -43,7 +43,7 @@
       z-index:990;
       .headerleftIconWhite{
         display: inline-block;
-        background: url("../../asset/img/btn_white-back@2x.png") no-repeat;
+        background: url('@{globalAddress}/btn_white-back@2x.png') no-repeat;
         width: 24px;
         height: 42px;
         background-size: 100%;
@@ -51,7 +51,7 @@
       }
       .headerleftIconBlack{
         display: inline-block;
-        background: url("../../asset/img/btn_black-back@2x.png") no-repeat;
+        background: url("@{globalAddress}/btn_black-back@2x.png") no-repeat;
         width: 24px;
         height: 42px;
         background-size: 100%;
@@ -59,7 +59,7 @@
       }
       .headerleftIconWhiteBlue{
         display: inline-block;
-        background: url("../../asset/img/btn_whiteBlue-back@2x.png") no-repeat;
+        background: url("@{globalAddress}/btn_whiteBlue-back@2x.png") no-repeat;
         width: 24px;
         height: 42px;
         background-size: 100%;
