--- a/src/common/orderDetailStatus/index.less
+++ b/src/common/orderDetailStatus/index.less
@@ -1,4 +1,4 @@
-
+@import "../../asset/css/config";
   .orderDetail-status{
     background:linear-gradient(90deg,rgba(99,198,249,1),rgba(72,157,245,1));
     color: #fff;
@@ -27,19 +27,19 @@
           vertical-align: middle;
         }
         .used{
-          background: url("../../asset/img/ok@2x.png")no-repeat;
+          background: url("@{globalAddress}/ok@2x.png")no-repeat;
           background-size: cover;
         }
         .retired{
-          background: url("../../asset/img/shibai@2x.png")no-repeat;
+          background: url("@{globalAddress}/shibai@2x.png")no-repeat;
           background-size: cover;
         }
         .useing{
-          background: url("../../asset/img/main_btn_time_nor-@2x.png")no-repeat;
+          background: url("@{globalAddress}/main_btn_time_nor-@2x.png")no-repeat;
           background-size: cover;
         }
         .paying{
-          background: url("../../asset/img/main_btn_time_nor-@2x.png")no-repeat;
+          background: url("@{globalAddress}/main_btn_time_nor-@2x.png")no-repeat;
           background-size: cover;
         }
       }
@@ -52,7 +52,7 @@
           display: inline-block;
           width: 32px;
           height: 32px;
-          background: url("../../asset/img/price_detail.png") no-repeat;
+          background: url("@{globalAddress}/price_detail.png") no-repeat;
           background-size: cover;
           margin-left: 10px;
           vertical-align: middle;
