--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -76,9 +76,10 @@
       padding-right: 16px;
     }
     .index-line-end{
+      text-align: right;
       >div,>view,>View{
         display: inline-block;
-        vertical-align: middle;
+        text-align: center;
       }
     }
     .second-line{
@@ -124,4 +125,13 @@
   bottom:20px;
   left: 50%;
   margin-left: -83px;
+}
+/*flex-box  custom*/
+.bst-flex-box1{
+  width: 100%;
+  padding-right: 150px;
+  margin-right: -150px;
+}
+.bst-flex-box2{
+  width: 150px;
 }
