--- a/src/pages/orderdetail/components/sectionCss.less
+++ b/src/pages/orderdetail/components/sectionCss.less
@@ -1,3 +1,4 @@
+@import "../../../asset/css/config";
 //温馨提示
 .title-content-topDown{
   width: 100%;
@@ -51,7 +52,7 @@
           margin-left: 10px;
           width: 16px;
           height: 26px;
-          background: url("../../../asset/img/right.png") no-repeat;
+          background: url("@{globalAddress}/right.png") no-repeat;
           background-size: cover;
         }
       }
@@ -90,7 +91,7 @@
         vertical-align: middle;
         width: 30px;
         height: 36px;
-        background: url("../../../asset/img/address.png") no-repeat;
+        background: url("@{globalAddress}/address.png") no-repeat;
         background-size: cover;
       }
       .phone::before{
@@ -99,7 +100,7 @@
         vertical-align: middle;
         width: 30px;
         height: 36px;
-        background: url("../../../asset/img/phone.png") no-repeat;
+        background: url("@{globalAddress}/phone.png") no-repeat;
         background-size: cover;
       }
     }
