--- a/src/common/BST-trao-components/index.less
+++ b/src/common/BST-trao-components/index.less
@@ -46,57 +46,55 @@
   }
 }
 
-/*双栏弹性盒子*/
-/*flex-box*/
-.flex-box{
-  width: 100%;
-  /*white-space: nowrap;*/
-}
-.flex-boxv{
-  width: 100%;
-  /*white-space: nowrap;*/
-}
-.flex-box>div{
+/*导航栏*/
+/*bst-nav-bar*/
+view{
   box-sizing: border-box;
-  position: relative;
+}
+.bst-nav-bar{
+  width: 100%;
+  background-color: white;
+  .bst-nav-center{
+    width: 100%;
+    height: 100%;
+    line-height: 90px;
+    font-size: 34px;
+    text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    font-weight: bold;
+  }
+  .bst-nav-left{
+    height: 100%;
+    position: relative;
+  }
+  .bst-nav-left:active{
+    background-color: #f5f5f5;
+  }
+  .bst-nav-left::after{
+    content: "";
+    display: inline-block;
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    left: 30px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    vertical-align: middle;
+    border-left: 5px solid #333333;
+    border-bottom: 5px solid #333333;
+    -webkit-transform: rotateZ(45deg);
+    -moz-transform: rotateZ(45deg);
+    -ms-transform: rotateZ(45deg);
+    -o-transform: rotateZ(45deg);
+    transform: rotateZ(45deg);
+  }
+}
+.bst-nav-bar>view,.bst-nav-bar>div{
   display: inline-block;
-  height: 100%;
-  vertical-align: top;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  white-space: nowrap;
+  vertical-align: middle;
 }
-.flex-boxv>div{
-  width: 100%;
-  box-sizing: border-box;
-  position: relative;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-.flex-box-drag{
-  display: block;
-  width: 5px;
-  height: 100%;
-  background-color: rosybrown;
-  cursor: w-resize;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 6;
-}
-.flex-box-dragv{
-  display: block;
-  height: 5px;
-  width: 100%;
-  background-color: rosybrown;
-  cursor: s-resize;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 6;
-}
+
