--- a/src/common/dateModel/date/date.less
+++ b/src/common/dateModel/date/date.less
@@ -33,14 +33,14 @@
   font-size: 30px;
   overflow: hidden;
   text-align: center;
-  >div{
+  .DH-week-item{
     width: 14%;
     height: 100%;
     float:left;
   }
 
-  >:first-child, >:last-child{
-    color:#FC5151;
+  >div:first-child,>view:first-child, >div:last-child,>view:last-child{
+    color:#38A8F6;
   }
 }
 
@@ -88,7 +88,7 @@
       }
       &.DH-month-date-allow{
         color: rgba(62, 62, 62, 1);
-        width: 14%;
+        width: 14.28%;
         height: 140px;
         .cn_fontSize{
           font-size: 24px;
@@ -102,12 +102,13 @@
           color: #0D87E4;
         }
         .DH-active-date {
-          width:90%;
+         // width:90%;
+          width: 100%;
           height:100%;
           background: #0D87E4;
           color: #fff;
           margin: 0 auto;
-          border-radius: 2px;
+          border-radius: 8px;
           display: flex;
           display:-webkit-box;
           display: -moz-box;
@@ -122,35 +123,9 @@
             color: #fff;
           }
         }
-      }
-     /* &.DH-month-date-allow {
-        color: rgba(62, 62, 62, 1);
-        width: 14%;
-        height: *140px;
-        .cn_fontSize{
-          font-size: *24px;
-          color:#3E3E3E;
-        }
 
-        .en_fontSize{
-          font-size:*28px;
-          color:#3E3E3E;
-        }
-        .tip{
-          color: #FC5151;
-        }
-        .DH-active-date {
-          width:90%;
-          height:100%;
-          background: #0D87E4;
-          color: #fff;
-          margin: 0 auto;
-          border-radius: 2px;
-          .tip, .cn_fontSize,.en_fontSize{
-            color: #fff;
-          }
-        }
-      }*/
+
+      }
       .tip {
         width: 100%;
         color: rgba(147, 146, 146, 1);
@@ -178,8 +153,11 @@
         z-index: 20;
         background-color: #fff;
       }
-
     }
+  }
+  .DH-active-middle-date{
+    background: #C7E6FB;
+    color:#3E3E3E;
   }
 }
 
@@ -200,4 +178,8 @@
   .content {
 
   }
+}
+
+.scroll-content{
+  height:100%
 }
