--- a/src/common/dateModel/date/date.less
+++ b/src/common/dateModel/date/date.less
@@ -64,8 +64,8 @@
     padding-top: 10px;
     background: #fff;
     /*justify-content: space-between;*/
-    & > div {
-      width: 14%;
+    & > div, &>view {
+      width: 14.28%;
       text-align: center;
       height: 140px;
      /* line-height: *100px;*/
@@ -75,7 +75,7 @@
       top: 0;
       left: 0;
       z-index: 10;
-      >div{
+      >div,>view{
         display: flex;
         display:-webkit-box;
         display: -moz-box;
