--- a/src/common/dateModel/index.less
+++ b/src/common/dateModel/index.less
@@ -1,43 +1,87 @@
 @import "../../asset/css/config";
-.weappH5-date{
+.weappH5-date {
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: 1000;
-  top:0;
-  .model{
+  top: 0;
+  .model {
     position: absolute;
     width: 100%;
     height: 100%;
-    background:rgba(0,0,0,.6);
+    background: rgba(0, 0, 0, .6);
   }
-  .content{
-    height: 80%;
-    max-height: 1000px;
-    position:fixed;
-    bottom:0;
+  .content {
+
+    position: fixed;
+    bottom: 0;
     width: 100%;
     background: #fff;
-    >view:first-child, >div:first-child{
-      height:78px;
+    > view:first-child, > div:first-child {
+      height: 78px;
       display: flex;
       align-items: center;
       justify-content: center;
       position: relative;
       color: #1A1A1A;
       font-size: 34px;
-      .close{
+      .close {
         position: absolute;
         right: 31px;
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
+        border: 5px solid #fff;
         background: url("@{globalAddress}/btn_delete@2x.png") no-repeat;
         background-size: 100% 100%;
         background-position: center center;
       }
     }
-    >view:last-child, >div:last-child{
-      height: calc(100% - 78px);
+
+    > view:nth-child(2), > div:nth-child(2) {
+      height: calc(100% - 220px);
+    }
+    .footer{
+      position: fixed;
+      bottom: 0;
+      height: 104px;
+      width: 100%;
+      display: flex;
+      line-height: 104px;
+      font-size: 30px;
+      >view:first-child,>div:first-child{
+        background: #FFF;
+        color:#3E3E3E;
+        flex: 1;
+        height: 100%;
+        text-align: center;
+      }
+      >view:last-child,>div:last-child{
+        background: #38A8F6;
+        color: #fff;
+        text-align: center;
+        flex: 1;
+      }
+
     }
   }
+  .model-show {
+    height: 80%;
+    max-height: 1000px;
+    animation: changeHeight .3s;
+    -webkit-animation: changeHeight .3s; /* Safari 和 Chrome */
+  }
 }
+
+@keyframes changeHeight
+{
+  from {height:0px;}
+  to {height: 80%;}
+}
+
+@-webkit-keyframes changeHeight /*Safari and Chrome*/
+{
+  from {height: 0px;}
+  to {height: 80%;}
+}
+
+
